# emishows

./: .dockerignore  .gitattributes  .gitignore  404.html  Dockerfile  README.md  environment.yml  index.html  pyproject.toml
.github/workflows/: docker-build.yml  docker-push.yml  docs.yml  draft.yml  migrations.yml  registry.yml  test-docker.yml  test.yml
emishows/: README.md  pyproject.toml
emishows/docs/: mkdocs.yml
emishows/docs/docs/: index.md
emishows/src/emishows/: __init__.py  __main__.py  asgi.py  config.py  events.py  manage.py  settings.py  urls.py  utils.py
emishows/src/emishows/app/: __init__.py  apps.py  models.py  serializers.py  views.py
emishows/src/emishows/app/migrations/: 0001_initial.py
emishows/tests/functional/: test_emishows.py
search/: search_index.json
usage/: index.html
